--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -601,6 +601,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#récupère 50 dirty et 50 clean pour créer une nouvelle liste\n",
+    "nb = 50\n",
+    "x_temp = x_train[list(y_train[y_train==0].index[:nb]) + list(y_train[y_train==1].index[:nb])]\n",
+    "y_temp = y_train[list(y_train[y_train==0].index[:nb]) + list(y_train[y_train==1].index[:nb])]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
